name:                wamp-client
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Wamp.Client
                       Network.Wamp.State
  -- other-modules:       
  -- other-extensions:    
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base                 ,
                       wamp-common          ,
                       aeson                ,
                       ixset                ,
                       random               ,
                       unordered-containers ,
                       websockets           ,
                       wuss