name:           wamp-client
version:        0.1.0.0
category:       Network
stability:      experimental
author:         Maciej Kazulak
maintainer:     kazulakm@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
      Network.Wamp.Client
      Network.Wamp.State
  build-depends:
      aeson
    , async
    , base
    , ixset
    , random
    , text
    , unordered-containers
    , vector
    , wamp-common
    , websockets
    , wuss
