name:           wamp-common
version:        0.1.0.0
description:    Web Application Messaging Protocol v2 Basic Profile building blocks common to both Client and Router.
category:       Network
stability:      experimental
author:         Maciej Kazulak
maintainer:     kazulakm@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
      Network.Wamp.Connection
      Network.Wamp.Messages
      Network.Wamp.Types
  build-depends:
      aeson
    , base
    , bytestring
    , hashable
    , text
    , unordered-containers
    , vector
    , websockets
