name:           wamp-router
version:        0.1.0.0
category:       Network
stability:      experimental
author:         Maciej Kazulak
maintainer:     kazulakm@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
      Network.Wamp.Router
      Network.Wamp.Broker
      Network.Wamp.Dealer
  build-depends:
      aeson
    , base
    , bytestring
    , ixset
    , random
    , unordered-containers
    , wamp-common
    , websockets
