name:           wamp
version:        0.1.0.0
synopsis:       WAMP v2 Basic Profile
description:    Web Application Messaging Protocol v2 Basic Profile
category:       Network
stability:      experimental
author:         Maciej Kazulak
maintainer:     kazulakm@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
      Network.Wamp
  build-depends:
      base
    , wamp-common
    , wamp-router
