
name:           poloniex
version:        0.1.0.0
category:       Network
stability:      experimental
author:         Maciej Kazulak
maintainer:     kazulakm@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10


executable poloniex
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:    base ==4.*

                    , aeson
                    , async 
                    , unordered-containers
                    , wamp-common
                    , warp-client
                    , websockets
                    , wuss